# claude-1

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  hello_plugin.c  loader.c  loader.h  main.c  plugin.h  test_plugin
plugins/: goodbye.c  hello.c  test.c
